@@ -1,44 +1,40 @@
 package io.github.snow.spire.items.intent;
 
-import io.github.snow.spire.enums.EffectTarget;
 import io.github.snow.spire.items.core.Fighter;
 import io.github.snow.spire.items.core.SourceChain;
 import io.github.snow.spire.items.effect.RoughEffect;
-import io.github.snow.spire.items.effect.rough.PowerAdder;
-import io.github.snow.spire.items.power.BasePower;
+import io.github.snow.spire.items.effect.rough.BlockAdder;
 import lombok.RequiredArgsConstructor;
 
-import java.util.Collections;
 import java.util.List;
 
 /**
  * @author snow
- * @since 2023/12/19
+ * @since 2023/12/20
  */
 @RequiredArgsConstructor
-public class BuffStrategic extends BaseIntent {
-
-    private final BasePower power;
+public class DefendIntent extends BaseIntent {
+    private final int block;
 
     @Override
     public String displayName() {
-        return "强化";
+        return "防守";
     }
 
     @Override
     public List<RoughEffect<?>> getRoughEffect(Fighter fighter) {
-        PowerAdder adder = new PowerAdder(EffectTarget.SELF, power);
+        BlockAdder adder = new BlockAdder(block);
         adder.setSource(new SourceChain().setFighter(fighter).setProducer(this));
-        return Collections.singletonList(adder);
+        return List.of(adder);
     }
 
     @Override
     public String description() {
-        return "这个敌人打算对自己使用增益效果。";
+        return "这个敌人打算获取格挡。";
     }
 
     @Override
     public Intent copy() {
-        return new BuffStrategic((BasePower) power.copy());
+        return new DefendIntent(block);
     }
 }
